[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "l4casadi"
version = "2.0.0"
authors = [
  { name="Tim Salzmann", email="Tim.Salzmann@tum.de" },
]
description = "Integrate PyTorch Model in CasADi graphs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "casadi>=3.6",
    "jinja2>=3.1"
]

[project.urls]
"Homepage" = "https://github.com/Tim-Salzmann/l4casadi"

[tool.setuptools]
packages = ["l4casadi", "l4casadi.naive", "l4casadi.naive.nn", "l4casadi.realtime", "l4casadi.template_generation"]